Fix double scroll issue in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,6 @@ body {
 }
 
 body > div {
-  width: 100vw;
   overflow-x: hidden;
 }
 li {
